Mi primera landing page que trata de un futuro porfolio

--- a/index.html
+++ b/index.html
@@ -8,49 +8,64 @@
 </head>
 <body>
     <header>
-        <div class="logo">QuiQueDev</div>
-        <div class="socials">
-            <a href="https://www.linkedin.com/in/quiquedev/" target="_blank">LinkedIn</a>
-            <a></a>
-            <a></a>
-        </div>
+        <nav class="header">
+            <div class="logo">QuiQueDev</div>
+            <div class="right-header">
+                <a href="https://www.linkedin.com/in/omar-franco-pufal-782458ab/" target="_blank">LinkedIn</a>
+                <a href="https://github.com/QuiQueDev79" target="_blank">GitHub</a>
+                <a href="https://x.com/omarfranco79?s=21" target="_blank">X</a>
+            </div>
+        </nav>
         <div class="hero">
-            <img src="img/pexels-pixabay-276452.jpg" alt="Hero Image" placeholder="Imagen de quiquedev">
-            <h1>Mi Portfolio</h1>
+            <div class="left-hero">
+                <h1>Mi Portfolio</h1>
+                <p>Hola, soy QuiQueDev, un desarrollador web apasionado<br> por crear experiencias digitales únicas.</p>
+                <p>Con experiencia en HTML, CSS, JavaScript y Python,<br> estoy aquí para ayudarte a llevar tu proyecto al siguiente nivel.</p>
+                <p>¡Explora mis trabajos y contáctame para colaborar!</p>
             <button>Contactar</button>
+            </div>
+            <div class="right-hero">
+            <img class="img-hero" src="img/pexels-pixabay-276452.jpg" alt="Hero Image" placeholder="Imagen de quiquedev">
+            </div>
         </div>
     </header>
     <section class="features">
         <h2>¿Qué tecnologías conozco?</h2>
         <div class="features-grid">
-         <div class="tech1">
-            <img src="" alt="">
-            <p>Desarrollo de aplicaciones web modernas y responsivas.</p>
+         <div class="html">
+            <img src="img/html.png" title="html icono" alt="Html Icon">
+            <p>HTML: Estructuración de contenido web.</p>
          </div>
-         <div class="tech2">
-            <img src="" alt="">
-            <p>Diseño de interfaces intuitivas y atractivas.</p>
+         <div class="css">
+            <img src="img/css-3.png" title="css icono" alt="Css Icon">
+            <p>CSS: Estilos y diseño responsivo.</p>
          </div>
-         <div class="tech3">
-            <img src="" alt="">
-            <p>Optimización para motores de búsqueda.</p>
+         <div class="js">
+            <img src="img/js.png" title="javascript icono" alt="JavaScript Icon">
+            <p>JavaScript: dinamismo en aplicaciones web.</p>
+         </div>
+         <div class="python">
+            <img src="img/piton.png" title="python icono" alt="Python Icon">
+            <p>Python: Desarrollo de aplicaciones.</p>
          </div>
         </div>
     </section>
     <section class="quote-section">
-        <blockquote></blockquote>
+        <blockquote>Esta es mi primera landing page, no me fijé en ningún trabajo de otra persona, hice lo que hice investigando un poco y algunas cosas que ya las estoy conociendo de apoco. Apenas se centrar un div asi que todo lo que digo aquí es mentira jaja...</blockquote>
     </section>
     <section class="cta">
-        <h2>¿Quieres saber más?</h2>
+        <div class="cta-content">
+            <div class="left-cta">
+            <h2>¿Quieres saber más?</h2>
         <p>Contáctame para discutir tu próximo proyecto.</p>
+            </div>
+            <div class="right-cta">
         <button>Contactar</button>
+            </div>
+        </div>
     </section>
     <footer>
         <p>&copy; 2025 QuiQueDev. Todos los derechos reservados.</p>
-        <div class="socials">
-            <a href="https://www.linkedin.com/in/quiquedev/" target="_blank">LinkedIn</a>
-            <a></a>
-            <a></a>
         </div>
     </footer>
 </body>
